18_reverse_str/grade.txt
Grading at Fri Feb 15 17:52:05 UTC 2019
Attempting to compile  reverse.c
reverse.c: In function ‘reverse’:
reverse.c:12:3: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   if (length = 0) {
   ^
reverse.c:13:12: error: ‘return’ with a value, in function returning void [-Werror]
     return "";
            ^
reverse.c:22:13: error: ‘return’ with a value, in function returning void [-Werror]
      return str;
             ^
reverse.c:7:16: error: unused variable ‘p1’ [-Werror=unused-variable]
   const char * p1 = str;
                ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
